# call-me-maybe

./: .flake8  .gitignore  Makefile  README.md  mypy.ini  pyproject.toml
data/input/: broken_functions_definition.json  function_calling_tests.json
data/output/: function_calling_results.json
src/: __main__.py  exceptions.py  generate.py  loader.py  models.py  state_machine.py
src/call_me_maybe/: __init__.py
