[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.14.0",
    "huggingface-hub>=1.19.0",
    "numpy>=2.2.6",
    "pydantic>=2.13.4",
    "torch>=2.12.0",
    "transformers>=5.12.0",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
