[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "llm-sdk",
    "numpy>=2.2.6",
    "pydantic>=2.13.4",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    "llm_sdk",
]

[tool.uv.sources]
llm-sdk = { workspace = true }
